src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(0) $0 - 24,999</fullName>
                </value>
                <value>
                    <fullName>(0) $0 - $24,999</fullName>
                </value>
                <value>
                    <fullName>(1) $25,000 - $49,000</fullName>
                </value>
                <value>
                    <fullName>(1) $25,000 - 49,999</fullName>
                </value>
                <value>
                    <fullName>(2) $50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>(2) $50,000 - 99,999</fullName>
                </value>
                <value>
                    <fullName>(3) $100,00 - 199,999</fullName>
                </value>
                <value>
                    <fullName>(3) $100,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>(4) $200,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>(4) $200,000 - 299,999</fullName>
                </value>
                <value>
                    <fullName>(5) $300,000 - 499,999</fullName>
                </value>
                <value>
                    <fullName>(5) $300,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>(6) $500,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>(6) $500,000 - 999,999</fullName>
                </value>
                <value>
                    <fullName>(7) $1,000,000 and over</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <formula>If(Day(Birthdate)=Day(Today()),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <formula>If(Month(Birthdate)=Month(Today()),1,0)</formula>
        <label>Birth Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birthday Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday_Day__c</fullName>
        <formula>Day(Birthdate)</formula>
        <label>Birthday Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Month__c</fullName>
        <formula>Month(Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Branch Manager Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Nature__c</fullName>
        <label>Business Nature</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HYPERLINK ('/'&amp; Id , FirstName &amp; " " &amp; LastName, '_top')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <label>Work phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_of_Citizenship__c</fullName>
        <label>Country of Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Resident</fullName>
                </value>
                <value>
                    <fullName>Resident Alien</fullName>
                </value>
                <value>
                    <fullName>Non-US Citizen</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Davenport_Assistant_Username__c</fullName>
        <label>Davenport Assistant Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Davenport_Username__c</fullName>
        <label>Davenport Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Director</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Divert_Code__c</fullName>
        <externalId>true</externalId>
        <label>Divert Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <label>Education Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(A) High School Graduate</fullName>
                </value>
                <value>
                    <fullName>(B) Post-Secondary Study</fullName>
                </value>
                <value>
                    <fullName>(C) 2 Year Degree</fullName>
                </value>
                <value>
                    <fullName>(D) College Graduate</fullName>
                </value>
                <value>
                    <fullName>(E) Post-Graduate Study</fullName>
                </value>
                <value>
                    <fullName>(F) Advanced Degree</fullName>
                </value>
                <value>
                    <fullName>(G) Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Bounced_Date__c</fullName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Bounded_Reason__c</fullName>
        <label>Email Bounded Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employed_or_Ass_d_with_B_D_or_RIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employed or Ass'd with B/D or RIA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Homemaker</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Investments__c</fullName>
        <label>Estimated Value of Investments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(A) Less than $10,000</fullName>
                </value>
                <value>
                    <fullName>(B) $10,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>(C) $25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>(D) $50,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>(E) $200,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>(F) $500,000 and over</fullName>
                </value>
                <value>
                    <fullName>(Z) Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExactTarget_Email_Du_Jour__c</fullName>
        <label>ExactTarget Email Du Jour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Affiliations__c</fullName>
        <label>Affiliations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__AgeAsText__c</fullName>
        <formula>IF(
    ISBLANK(Birthdate),
    
    '',

    IF(
        And(
            Month(Today()) &gt;= Month(Birthdate),
            Day(Today()) &gt;=  Day(Birthdate)
        ),

        TEXT(Year(Today())- Year(Birthdate)) &amp; " " &amp; "years" &amp; " " &amp; TEXT(Month(Today())-Month(Birthdate)) &amp; " " &amp; "months" &amp; " " &amp; TEXT(Day(Today())-Day(Birthdate)),
    
        IF(
            And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
        
            TEXT(Year(Today())-Year(Birthdate)-1) &amp; " " &amp; "years" &amp; " " &amp; TEXT(12 - Month(Birthdate)+month(Today())) &amp; " " &amp; "months" &amp; " " &amp; TEXT(Day(Today())-Day(Birthdate)),
    
            if(
                And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),

                (TEXT( (Year(Today())-Year(Birthdate)-1)) &amp; " " &amp; "years" &amp; " " &amp; TEXT((12 - Month(Birthdate)+month(Today())-1)) &amp; " " &amp; "months" ) &amp; " " &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                if(
                    And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
                
                    (TEXT(Year(Today())- Year(Birthdate)-1)) &amp; " " &amp; "years" &amp; " " &amp; "11" &amp; " " &amp; "months" &amp; " " &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                    (TEXT(Year(Today())- Year(Birthdate))) &amp; " " &amp; "years" &amp; " " &amp; TEXT(Month(Today())-Month(Birthdate)-1) &amp; " " &amp; "months" &amp; " " &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    )
                )
            )
        )
    ) &amp; " " &amp; "days"
)</formula>
        <label>Age As Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Age__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
Year(Today())- Year(Birthdate) +
(Month(Today())-Month(Birthdate))/12,
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
Year(Today())-Year(Birthdate)-1 +
(12 - Month(Birthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())-Year(Birthdate)-1) + 
((12 - Month(Birthdate)+month(Today())-1))/12,
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())- Year(Birthdate)-1) + (11/12),
(Year(Today())- Year(Birthdate)) + 
(Month(Today())-Month(Birthdate)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingAddress__c</fullName>
        <description>Compound field for Billing Address.</description>
        <formula>if(ISBLANK(Account.BillingStreet), "" , Account.BillingStreet &amp; br() )&amp;
if(ISBLANK(Account.BillingCity), "" , Account.BillingCity &amp; ", " )&amp;
if(ISBLANK(Account.BillingState), "" , Account.BillingState &amp; " " )&amp;
if(ISBLANK(Account.BillingPostalCode), "" , Account.BillingPostalCode &amp; br())&amp;
if(ISBLANK(Account.BillingCountry), "" , Account.BillingCountry)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CommunicationPreferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud:Phone</fullName>
                </value>
                <value>
                    <fullName>Fraud:Email</fullName>
                </value>
                <value>
                    <fullName>Fraud:SMS</fullName>
                </value>
                <value>
                    <fullName>Promotions:Phone</fullName>
                </value>
                <value>
                    <fullName>Promotions:Email</fullName>
                </value>
                <value>
                    <fullName>Promotions:SMS</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Phone</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Email</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ContactPreference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfResidence__c</fullName>
        <description>Country of residence.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentEmployer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerTimezone__c</fullName>
        <label>Customer Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EmailVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployedSince__c</fullName>
        <description>Year when client started with current employer.</description>
        <label>Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__FaxVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomeOwnership__c</fullName>
        <label>Home Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomePhoneVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <description>Unique ID that relates this individual's contact record to its account record.</description>
        <formula>Account.FinServ__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LanguagesSpoken__c</fullName>
        <label>Languages Spoken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LastFourDigitSSN__c</fullName>
        <description>Last 4-Digits of SSN or Tax ID</description>
        <label>SSN/Tax ID (Last Four Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__MailingAddress__c</fullName>
        <description>Compound field for Mailing Address.</description>
        <formula>if(ISBLANK(MailingStreet),  "" , MailingStreet &amp; br()) &amp;
if(ISBLANK(MailingCity),  "" , MailingCity&amp; ", " ) &amp;
if(ISBLANK(MailingState),  "" , MailingState&amp; " " ) &amp;
if(ISBLANK(MailingPostalCode),  "" , MailingPostalCode &amp; br()) &amp;
if(ISBLANK(MailingCountry),  "" , MailingCountry)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MarketingOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MostUsedChannel__c</fullName>
        <label>Most Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MotherMaidenName__c</fullName>
        <description>Mother's Maiden Name</description>
        <label>Mother's Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__NextLifeEvent__c</fullName>
        <label>Next Life Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Enter Workforce</fullName>
                </value>
                <value>
                    <fullName>Returning to Workforce</fullName>
                </value>
                <value>
                    <fullName>First Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Critical Family Event</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfChildren__c</fullName>
        <label>Number Of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfDependents__c</fullName>
        <description>Number of dependents.</description>
        <label>Number of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherAddress__c</fullName>
        <description>Compound field for Other Address.</description>
        <formula>if(ISBLANK(OtherStreet), "" , OtherStreet &amp; br()) &amp;
if(ISBLANK(OtherCity), "" , OtherCity&amp; ", " ) &amp;
if(ISBLANK(OtherState), "" , OtherState&amp; " " ) &amp;
if(ISBLANK(OtherPostalCode), "" , OtherPostalCode &amp; br()) &amp;
if(ISBLANK(OtherCountry), "" , OtherCountry)</formula>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PreferredName__c</fullName>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Billing Address as the primary address.</description>
        <label>Primary Address (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Mailing Address as the primary address.</description>
        <label>Primary Address (Mailing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Other Address as the primary address.</description>
        <label>Primary Address (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Shipping Address as the primary address.</description>
        <label>Primary Address (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryCitizenship__c</fullName>
        <label>Primary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>ContactContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryCitizenship__c</fullName>
        <label>Secondary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShippingAddress__c</fullName>
        <description>Concatenated shipping address field.</description>
        <formula>if(ISBLANK(Account.ShippingStreet), "" , Account.ShippingStreet &amp; br()) &amp;
if(ISBLANK(Account.ShippingCity), "" , Account.ShippingCity&amp; ", ")&amp;
if(ISBLANK(Account.ShippingState),  "" , Account.ShippingState&amp; " ")&amp;
if(ISBLANK(Account.ShippingPostalCode), "" , Account.ShippingPostalCode &amp; br())  &amp;
If(ISBLANK( Account.ShippingCountry), "" , Account.ShippingCountry)</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
</CustomObject>